@@ -27,13 +27,13 @@ dependencies {
     implementation ('org.apache.commons:commons-dbcp2:2.13.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'commons-net:commons-net:3.11.1'
+    implementation 'commons-net:commons-net:3.12.0'
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.25.1'
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.8.0.25.04'
-    implementation 'org.springframework:spring-jdbc:6.2.8'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.9.0.25.07'
+    implementation 'org.springframework:spring-jdbc:6.2.9'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
